--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/improveskill
-spring.datasource.username=${USER_NAME}
-spring.datasource.password=${PASSWORD}
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
-
 server.port=8085
+spring.profiles.active=${APP_PROFILE:test}
+
