--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
