other modifications are about Validations

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,6 @@ build/
 ### VS Code ###
 .vscode/
 
-### Informações de codigo que não é para subir ###
+### Informations of code that is not to up ###
 info.txt
 
